Site save, looking nice

--- a/site/index.htm
+++ b/site/index.htm
@@ -18,18 +18,34 @@
 		</header>
 
 		<div class="main">
-			<div id="about">
+			<div class="section" id="about">
 				<h2>About</h2>
+				<p class="info">
+					The Kiiski houshold consists of seven members. Father Kiiski, 
+					Joona, has a wife named Senja. They have five kids, named Lilja,
+					Noora, Petteri, Susanna, and Luukas. The kids go to school.
+					Lilja and Noora go to Monta Vista HS, and Lilja is Junior and
+					Noora is a Sophomore. Petteri is an 8th grader and goes to Kennedy 
+					Middle School. Susanna and Luukas are in some elementary grades that
+					I can't remember, but they go to the fancy church school. All the kids 
+					are very kind. Especially Lilja, who is everyone's role model.
+				</p>
 	
 			</div>
 		
-			<div id="contact">
+			<div class="section" id="contact">
 				<h2>Contact</h2>
+
+				<ul class="info">
+					<li>22474 Cupertino Rd</li>
+					<li>Cupertino, CA 95014</li>
+					<li>USA</li>
+				</ul>
 			</div>
 		</div>
 
 		<footer>
-			<p>&copy; 2023 Kiiski Home</p>
+			<p>2023 Kiiski Home</p>
 		</footer>
 	</body>	
 </html>
