Added all members

--- a/site/index.htm
+++ b/site/index.htm
@@ -13,6 +13,7 @@
 				<ul>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="#members">Members</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -20,6 +21,7 @@
 		<div class="main">
 			<div class="section" id="about">
 				<h2>About</h2>
+
 				<p class="info">
 					The Kiiski houshold consists of seven members. Father Kiiski, 
 					Joona, has a wife named Senja. They have five kids, named Lilja,
@@ -30,7 +32,75 @@
 					I can't remember, but they go to the fancy church school. All the kids 
 					are very kind. Especially Lilja, who is everyone's role model.
 				</p>
-	
+			</div>
+
+			<div class="section family-members" id="members">
+				<h2>Members</h2>
+
+				<div class="family-members">
+					<div class="profile-box">
+						<img src="assets/images/joona.png">
+						<h3>Joona Kiiski</h3>
+						<p>
+							Father of Kiiski family. Works at Zoox. Can
+							do cool coding things.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/senja.png">
+						<h3>Senja Kiiski</h3>
+						<p>
+							Mother of Kiiski family. Makes very good food. 
+							Lilja especially likes Macarooni Laatikko.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/lilja.png">
+						<h3>Lilja Kiiski</h3>
+						<p>
+							High School Junior who does programming 
+							and cool things. She is not dying.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/noora.png">
+						<h3>Noora Kiiski</h3>
+						<p>
+							Noora plays the violin! She is very cute, and
+							she also knows a little programming.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/petteri.png">
+						<h3>Petteri Kiiski</h3>
+						<p>
+							Petteri also plays violin. And piano. He also does
+							programming, and is cute.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/susanna.png">
+						<h3>Susanna Kiiski</h3>
+						<p>
+							Susanna also plays the violin. She is cute, and does
+							sewing. She has long hair.
+						</p>
+					</div>
+
+					<div class="profile-box">
+						<img src="assets/images/luukas.png">
+						<h3>Luukas Kiiski</h3>
+						<p>
+							Luukas is the baby of the family! He plays piano, and
+							is very cute and adorable. He also plays chess.
+						</p>
+					</div>
+				</div>
 			</div>
 		
 			<div class="section" id="contact">
