Simple animation of title

--- a/site/index.htm
+++ b/site/index.htm
@@ -4,11 +4,12 @@
 		<title>Kiiski Home</title>
 		<link rel="stylesheet" type="text/css" href="assets/style.css">
         <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+		<script src="script.js"></script>
 	</head>
 
 	<body>
 		<header>
-			<h1>Kiiski Home</h1>
+			<h1 id="gliding-title">Kiiski Home</h1>
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
