--- a/site/index.htm
+++ b/site/index.htm
@@ -13,8 +13,8 @@
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
 					<li><a href="#members">Members</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -35,7 +35,7 @@
 				</p>
 			</div>
 
-			<div class="section family-members" id="members">
+			<div class="section" id="members">
 				<h2>Members</h2>
 
 				<div class="family-members">
