Many borders, plus text comes from above now

--- a/site/index.htm
+++ b/site/index.htm
@@ -8,18 +8,18 @@
 	</head>
 
 	<body>
-		<header>
-			<h1 id="gliding-title">Kiiski Home</h1>
-			<nav>
-				<ul>
-					<li><a href="#about">About</a></li>
-					<li><a href="#members">Members</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-
 		<div class="main">
+			<div class="header">
+				<h1 id="gliding-title">Kiiski Home</h1>
+				<nav>
+					<ul>
+						<li><a href="#about">About</a></li>
+						<li><a href="#members">Members</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+
 			<div class="section" id="about">
 				<h2>About</h2>
 
@@ -27,7 +27,7 @@
 					The Kiiski houshold consists of seven members. Father Kiiski, 
 					Joona, has a wife named Senja. They have five kids, named Lilja,
 					Noora, Petteri, Susanna, and Luukas. The kids go to school.
-					Lilja and Noora go to Monta Vista HS, and Lilja is Junior and
+					Lilja and Noora go to Monta Vista High School, and Lilja is Junior and
 					Noora is a Sophomore. Petteri is an 8th grader and goes to Kennedy 
 					Middle School. Susanna and Luukas are in some elementary grades that
 					I can't remember, but they go to the fancy church school. All the kids 
