This is about the nicest website I've made

--- a/site/index.htm
+++ b/site/index.htm
@@ -113,10 +113,10 @@
 					<li>USA</li>
 				</ul>
 			</div>
-		</div>
 
-		<footer>
-			<p>2023 Kiiski Home</p>
-		</footer>
+			<div class="footer">
+				<p>2023 Kiiski Home</p>
+			</div>
+		</div>
 	</body>	
 </html>
