--- a/site/index.htm
+++ b/site/index.htm
@@ -115,7 +115,7 @@
 			</div>
 
 			<div class="footer">
-				<p>2023 Kiiski Home</p>
+				<p>&copy; 2023 Kiiski Home</p>
 			</div>
 		</div>
 	</body>	
