--- a/site/index.htm
+++ b/site/index.htm
@@ -37,8 +37,8 @@
 
 				<div class="family-members">
 					<div class="profile-box">
-						<img src="assets/joona.png">
-						<h3>Joona Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/joona.png?raw=true">
+						<h3>Joona</h3>
 						<p>
 							Father of Kiiski family. Works at Zoox. Can
 							do cool coding things.
@@ -46,8 +46,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/senja.png">
-						<h3>Senja Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/senja.png?raw=true">
+						<h3>Senja</h3>
 						<p>
 							Mother of Kiiski family. Makes very good food. 
 							Lilja especially likes Macarooni Laatikko.
@@ -55,8 +55,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/lilja.png">
-						<h3>Lilja Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/lilja.png?raw=true">
+						<h3>Lilja</h3>
 						<p>
 							High School Junior who does programming 
 							and cool things. She is not dying.
@@ -64,8 +64,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/noora.png">
-						<h3>Noora Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/noora.png?raw=true">
+						<h3>Noora</h3>
 						<p>
 							Noora plays the violin! She is very cute, and
 							she also knows a little programming.
@@ -73,8 +73,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/petteri.png">
-						<h3>Petteri Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/petteri.png?raw=true">
+						<h3>Petteri</h3>
 						<p>
 							Petteri also plays violin. And piano. He also does
 							programming, and is cute.
@@ -82,8 +82,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/susanna.png">
-						<h3>Susanna Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/susanna.png?raw=true">
+						<h3>Susanna</h3>
 						<p>
 							Susanna also plays the violin. She is cute, and does
 							sewing. She has long hair.
@@ -91,8 +91,8 @@
 					</div>
 
 					<div class="profile-box">
-						<img src="assets/luukas.png">
-						<h3>Luukas Kiiski</h3>
+						<img src="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/luukas.png?raw=true">
+						<h3>Luukas</h3>
 						<p>
 							Luukas is the baby of the family! He plays piano, and
 							is very cute and adorable. He also plays chess.
