--- a/site/index.htm
+++ b/site/index.htm
@@ -50,7 +50,7 @@
 						<h3>Senja</h3>
 						<p>
 							Mother of Kiiski family. Makes very good food. 
-							Lilja especially likes Macarooni Laatikko.
+							Lilja especially likes Makarooni Laatikko.
 						</p>
 					</div>
 
@@ -105,9 +105,8 @@
 				<h2>Contact</h2>
 
 				<ul class="info">
-					<li>22474 Cupertino Rd</li>
-					<li>Cupertino, CA 95014</li>
-					<li>USA</li>
+					<li>You are at the house if you are viewing this...</li>
+					<li>Ask someone for contact info</li>
 				</ul>
 			</div>
 
