Moved back to individual files

--- a/site/index.htm
+++ b/site/index.htm
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Kiiski Home</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="shortcut icon" type="image/png" href="https://github.com/LiljaKiiski/kiiski-home-site/blob/master/site/assets/favicon.png?raw=true">
+		<script src="script.js"></script>
 	</head>
 
 	<body>
@@ -115,169 +118,4 @@
 			</div>
 		</div>
 	</body>	
-
-	<!-- SCRIPT -->
-	<script>
-		function glideTitle() {
-			const title = document.getElementById('gliding-title');
-			title.style.opacity = '0';
-			title.style.transform = 'translateY(-200%)';
-
-			setTimeout(() => {
-				title.style.transition = 'opacity 1s, transform 1s';
-				title.style.opacity = '1';
-				title.style.transform = 'translateY(0)';
-			}, 100); //Slight delay
-		}
-
-		window.onload = glideTitle;
-
-	</script>
-
-	<!-- STYLE --> 
-	<style>
-		/* BODY */
-		body, h1, h2, p, ul, li {
-			margin: 0;
-			padding: 0;
-		}
-
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f7eee8;
-			color: #4a4a4a;
-		}
-
-		h2 {
-			font-size: 22px;
-			color: #5d534f;
-			margin-bottom: 10px;
-		}
-
-		/* HEADER */
-		.header {
-			background-color: #f3d2c1;
-			border-radius: 10px;
-			text-align: center;
-			padding: 40px;
-			margin: 20px;
-		}
-
-		.header #gliding-title {
-			font-size: 70px;
-			color: #8f817b;
-			text-shadow: -4px 4px #5d534f;
-			margin-bottom: 45px;
-		}
-
-		/* NAVBAR */
-		nav {
-			text-align: center;
-		}
-
-		nav ul {
-			display: inline-block;
-			list-style-type: none;
-		}
-
-		nav ul li {
-			display: inline;
-			margin-right: 10px;
-		}
-
-		nav ul li a {
-			text-decoration: none;
-			color: #5d534f;
-			font-weight: bold;
-			background-color: #f3d2c1;
-			padding: 13px;
-			border-style: solid;
-			border-radius: 5px;
-			box-shadow: 5px 5px #8f817b;
-		}
-
-		/* MAIN */
-		@media (min-width: 900px){
-			.main {
-				margin-left: 20vw;
-				margin-right: 20vw;
-				padding: 20px;
-				background: #ecbfb0;
-			}
-		}
-
-		@media (max-width: 900px) {
-			.main {
-				margin-left: 2vw;
-				margin-right: 2vw;
-				padding: 20px;
-				background: #ecbfb0;
-			}
-		}
-
-		.section {
-			margin-bottom: 10px;
-			text-align: center;
-		}
-
-		.section ul {
-			display: inline-block;
-			list-style-type: none;
-		}
-
-		.section h2 {
-			border-style: solid;
-			border-radius: 5px;
-			padding: 20px;
-			margin: 20px;
-			background-color: #f3d2c1;
-			box-shadow: 10px 10px #8f817b;
-		}
-
-		.section .info {
-			border-radius: 10px;
-			background: #fffef8;
-			box-shadow: 10px 10px #cab6ae;
-			padding: 40px;
-			margin-top: 30px;
-			margin-bottom: 30px;
-			margin-left: 10vw;
-			margin-right: 10vw;
-		}
-
-		/* MEMBERS */
-		.family-members {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-		}
-
-		.profile-box {
-			width: 200px;
-			margin: 20px;
-			padding: 10px;
-			border-radius: 20px;
-			background-color: #f3d2c1;
-			box-shadow: 10px 10px #ffeed7;
-		}
-
-		.profile-box img {
-			padding-top: 10px;
-			width: 180px;
-		}
-
-		.profile-box p {
-			padding: 5px;
-		}
-
-		/* FOOTER */
-		.footer {
-			background-color: #f3d2c1;
-			border-radius: 5px;
-			padding: 10px;
-			text-align: center;
-			font-size: 14px;
-			color: #5d534f;
-		}
-	</style>
 </html>
